# vecminDB

./: .gitignore  Cargo.toml  LICENSE  README.md
.cursor/rules/: guize.mdc  thinkl.mdc
src/: cache_common.rs  compat.rs  config.rs  error.rs  hashing.rs  lib.rs  main.rs  network.rs  status.rs  types.rs
src/algorithm/: adapter.rs  algorithm.rs  algorithm_impl.rs  algorithm_types.rs  base_types.rs  enhanced_executor.rs  execution_types.rs  factory.rs  gpu.rs  management_types.rs  mod.rs  optimization.rs  resource.rs  resource_enforcer.rs  sandbox_types.rs  security.rs  security_auto.rs  security_engine.rs  status.rs  storage.rs  traits.rs  tree.rs  types.rs  utils.rs  validation.rs  validator.rs  wasm_security.rs  worker.rs
src/algorithm/executor/: config.rs  dsl.rs  metrics.rs  mod.rs  resources.rs  result.rs  wasm.rs
src/algorithm/manager/: adapter.rs  config.rs  core.rs  execute.rs  metrics.rs  mod.rs  storage_ext.rs  task.rs
src/algorithm/tests/: manager_tests.rs
src/algorithm/wasm/: mod.rs  mod.rs.bak
src/api/: handlers.rs  middleware.rs  mod.rs  response.rs  server.rs
src/api/collections/: handlers.rs  mod.rs  types.rs
src/api/routes/: mod.rs
src/api/vector/: handlers.rs  mod.rs  types.rs
src/cache/: backend.rs  disk.rs  distributed.rs  manager.rs  memory.rs  mod.rs  optimizer.rs  remote.rs  vector_cache.rs
src/core/: adapters.rs  common_types.rs  dependency_manager.rs  dependency_resolver.rs  import_manager.rs  migration_guide.rs  mod.rs  registry.rs  results.rs  types.rs  unified_algorithm_service.rs  unified_system.rs  unified_types.rs
src/core/ai_database_service/: config.rs  health.rs  mod.rs  statistics.rs  types.rs
src/core/container/: application_container.rs  examples.rs  global.rs  mod.rs  service_container.rs
src/core/implementations/: algorithm_impl.rs  container_impl.rs  data_impl.rs  event_impl.rs  mod.rs  model_impl.rs  monitoring_impl.rs  storage_impl.rs  training_impl.rs
src/core/integration/: automation.rs  data_flow.rs  mod.rs  state_sync.rs  transaction.rs  workflow.rs
src/core/interfaces/: algorithm.rs  algorithm_interface.rs  algorithm_model.rs  api_upload.rs  data.rs  data_interface.rs  gpu_impl.rs  mod.rs  monitoring.rs  service_registry.rs  storage.rs  storage_impl.rs  storage_interface.rs
src/data/: README.md  batch.rs  cache.rs  consistency.rs  dataset.rs  exports.rs  factory.rs  format_support.rs  io.rs  iterator.rs  manager.rs  manager_core.rs  mod.rs  processing.rs  record.rs  shard.rs  streaming.rs  transform.rs  types.rs  value.rs  versioning.rs
src/data/adaptive_weights/: interface.rs  mod.rs
src/data/connector/: advanced_pool.rs  cassandra_connector.rs  connector_example.rs  elasticsearch_connector.rs  factory.rs  manager.rs  mod.rs  mongodb_connector.rs  mysql_connector.rs  neo4j_connector.rs  postgresql_connector.rs  redis_connector.rs  sqlite_connector.rs  types.rs
src/data/feature/: adapter.rs  adapters.rs  config.rs  evaluator.rs  factory.rs  factory_impl.rs  fusion.rs  interface.rs  mod.rs  pipeline.rs  types.rs  unified_factory.rs  validating_extractor.rs  validator.rs  vector.rs
src/data/image_processing/: mod.rs
src/data/loader/: async_loader.rs  batch_importer.rs  config.rs  context.rs  factory.rs  importer.rs  memory.rs  mod.rs  progress.rs  result.rs  types.rs  validation.rs
src/data/method_selector/: analyzer.rs  config.rs  evaluator.rs  mod.rs  rules.rs  selector.rs  types.rs
src/data/multimodal/: README.md  fusion.rs  mod.rs  mod.rs.clean  processor.rs  video_extractor.rs.bak  video_extractor_fixes.rs  video_feature.rs
src/data/pipeline/: core.rs  examples.rs  file_detection.rs  import_pipeline.rs  mod.rs  parallel_processor.rs  performance.rs  pipeline.rs  pipeline_registry.rs  record_batch.rs  schema_inference.rs  stages.rs  storage_writer.rs  tests.rs  traits.rs  validation.rs  validators.rs
src/data/processor/: adapter.rs  config.rs  core.rs  data_ops.rs  factory_adapter.rs  mod.rs  processor_impl.rs  record_ops.rs  schema_ops.rs  traits.rs  transformers.rs  types.rs  types_core.rs  utils.rs
src/data/schema/: mod.rs  schema.rs
src/data/shared/: mod.rs  processor_core.rs
src/data/tests/: batch_mapping.rs  mod.rs  (+4 more)
src/event/: distributed.rs  enhanced.rs  file.rs  memory.rs  mod.rs  unified.rs
src/interfaces/: algorithm.rs  db.rs  mod.rs  storage.rs
src/memory/: cache_optimizer.rs  gc_collector.rs  leak_detector.rs  mod.rs  pool.rs  reference_optimizer.rs  shard_manager.rs
src/monitoring/: analyzer.rs  collector.rs  metrics.rs  mod.rs  reporter.rs
src/resource/: cache.rs  coordinator.rs  manager.rs  mod.rs  types.rs  vector_resource.rs
src/storage/: compression.rs  index_storage.rs  kv_storage.rs  metadata_storage.rs  mod.rs  serialization.rs  types.rs  vector_storage.rs
src/utils/: batch.rs  compression.rs  concurrency.rs  errors.rs  files.rs  hash.rs  id.rs  mod.rs  parameters.rs  path.rs  time.rs  validation.rs
src/vector/: mod.rs  search.rs  search_options.rs  types.rs
(+394 files in other folders)
