[package]
name = "vecmindb"
version = "0.1.0"
edition = "2021"
authors = ["VecminDB Team"]
description = "High-performance vector database with multiple index algorithms"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/vecmindb"
readme = "README.md"

[features]
default = ["http-server"]
http-server = ["actix-web", "actix-rt"]
simd = []
gpu = []
distributed = ["redis"]
full = ["simd", "gpu", "distributed"]
linalg = ["ndarray-linalg"]
excel = ["calamine", "rust_xlsxwriter"]
rhai = ["dep:rhai"]
arrow = ["dep:arrow"]
winapi = ["dep:winapi"]
parquet = ["dep:parquet"]
tempfile = ["dep:tempfile"]
walkdir = ["dep:walkdir"]
redis = ["dep:redis"]
wasmtime = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:wasmparser"]
multimodal = ["image", "reqwest", "symphonia", "realfft", "rustfft"]
websocket = ["tokio-tungstenite"]
# Database connector features (optional, for future use)
postgres = []
mysql = []
sqlite = []
mongodb = []
elasticsearch = []
cassandra = []
neo4rs = []
# Other optional features
regex = []
sysinfo = []
wasmparser = []
memcached = []
snappy = []
grpc = []

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
tokio = { version = "1.31", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
bytes = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
sled = "0.34"
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }

# Math and vector operations
ndarray = { version = "0.15", features = ["serde"] }
ndarray-linalg = { version = "0.16", optional = true }
rayon = "1.8"
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"
approx = "0.5"

# Concurrency
crossbeam = "0.8"
crossbeam-channel = "0.5"
dashmap = "5.5"
parking_lot = "0.12"

# Caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }
lru = "0.11"

# HTTP server (optional)
actix-web = { version = "4.0", features = ["macros", "rustls"], optional = true }
actix-rt = { version = "2.8", optional = true }
actix-cors = { version = "0.6", optional = true }

# Utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
num_cpus = "1.16"
lazy_static = "1.4"
once_cell = "1.20"

# Hashing
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
blake3 = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crc32fast = "1.3"
hmac = "0.12"
pbkdf2 = "0.12"
hex = "0.4"
# highway = "0.9"  # 暂时注释掉，因为0.5.0版本有编译错误，需要检查API兼容性
fnv = "1.0"

# Compression
zstd = "0.12"
flate2 = "1.0"
lz4_flex = "0.11"
brotli = "3.4"
tar = "0.4"

# Serialization
rmp-serde = "1.1"
toml = "0.7"

# CLI (for server binary)
clap = { version = "4.5", features = ["derive"] }

# WASM runtime (optional, for algorithm sandbox)
wasmtime = { version = "18.0", optional = true }

# Other
base64 = "0.21"
regex = "1.9"
bytemuck = "1.18"

# Data processing (optional)
csv = "1.3"
calamine = { version = "0.24", optional = true }
rust_xlsxwriter = { version = "0.75", optional = true }
byteorder = "1.5"
parquet = { version = "50.0", optional = true }

# Scripting (optional)
rhai = { version = "1.19", optional = true }

# Arrow data format (optional)
arrow = { version = "50.0", optional = true }

# Decimal number support
rust_decimal = "1.33"

# URL parsing
url = "2.5"

# System information
sysinfo = "0.30"

# WASM parsing (optional)
wasmparser = { version = "0.121", optional = true }

# Dynamic trait cloning
dyn-clone = "1.0"

# Fast random number generation
fastrand = "2.0"

# Text processing
rust-stemmers = "1.2"
stop-words = "0.9"
unicode-segmentation = "1.11"
unicode-normalization = "0.1"

# Image processing (optional)
image = { version = "0.25", optional = true }

# HTTP client (optional)
reqwest = { version = "0.11", features = ["blocking"], optional = true }

# WebSocket support (optional)
tokio-tungstenite = { version = "0.20", optional = true }

# Audio processing (optional)
symphonia = { version = "0.5", optional = true }
realfft = { version = "3.3", optional = true }
rustfft = { version = "6.1", optional = true }

# Temporary file support (optional)
tempfile = { version = "3.8", optional = true }

# Directory walking (optional)
walkdir = { version = "2.4", optional = true }

# WASM support (optional)
wasmtime-wasi = { version = "18.0", optional = true }

# Windows-specific (optional, only on Windows)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi", "processthreadsapi", "psapi", "minwindef"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[lib]
name = "vecmindb"
path = "src/lib.rs"

[[bin]]
name = "vecmindb-server"
path = "src/main.rs"
required-features = ["http-server"]
